--- a/index.html
+++ b/index.html
@@ -138,15 +138,21 @@
                 <div class="best">
                     <div class="img1">
                         <img src="img/img1.png" alt="" width="200">
-                        <span>Voir descriptif</span>
+                        <div class="ov">
+                            <span>Voir descriptif</span>
+                        </div>
                     </div>
                     <div>
                         <img src="img/img2.png" alt="" width="200">
-                        <span>Voir descriptif</span>
+                        <div class="ov">
+                            <span>Voir descriptif</span>
+                        </div>
                     </div>
                     <div>
                         <img src="img/img3.png" alt="" width="200">
-                        <span>Voir descriptif</span>
+                        <div class="ov">
+                            <span>Voir descriptif</span>
+                        </div>
                     </div>
                 </div>
             </div>
