--- a/index.html
+++ b/index.html
@@ -157,6 +157,14 @@
                 </div>
             </div>
         </div>
+        <iframe
+        width="600"
+        height="450"
+        style="border:0"
+        loading="lazy"
+        allowfullscreen
+        src="https://www.google.com/maps/embed/v1/place?key=AIzaSyDOgrYvBtVqYX0xejgzIShAOFYjdkav7R8&q=Space+Needle,Seattle+WA">
+        </iframe>
     </main>
     <footer>
         <div>
