--- a/user.html
+++ b/user.html
@@ -23,16 +23,15 @@
             <h1>Mon compte</h1>
             <p>Test Pourvoir</p>
         </div>
-        <hr>
 
-        <div>
+        <div class="info-user">
             <h2>Mes informations</h2>
             <p>Mes commandes</p>
             <p>Mes réclamations</p>
             <p>Mes réclamations</p>
         </div>
 
-        <form action="">
+        <form class="form-user" action="">
             <h2>Mes informations</h2>
             <div>
                 <label for="">Nom</label>
