--- a/user.html
+++ b/user.html
@@ -11,7 +11,7 @@
     <header>
         <div class="logo">
             <img src="./img/logo.png" alt="logo">
-            <h1>Les Vacances Chez Gustaves</h1>
+            <h1>Les Vacances Chez Gustave</h1>
         </div>
         <nav>
             <button>Accueil</button>
@@ -26,18 +26,23 @@
 
         <div class="info-user">
             <h2>Mes informations</h2>
-            <p>Mes commandes</p>
-            <p>Mes réclamations</p>
-            <p>Mes réclamations</p>
+            <div class="txt-info">
+                <p>Mes commandes</p>
+                &#160;
+                <p>Mes réclamations</p>
+                &#160;
+                <p>Mes réclamations</p>
+            </div>
         </div>
+
 
         <form class="form-user" action="">
             <h2>Mes informations</h2>
-            <div>
+            &#160;
+            <div class="name-user">
                 <label for="">Nom</label>
                 <input type="text">
-            </div>
-            <div>
+        
                 <label for="">Prénom</label>
                 <input type="text">
             </div>
@@ -47,6 +52,7 @@
             </div>
 
             <h2>Changement de mot de passe</h2>
+            &#160;
             <div>
                 <label for="">Mot de passe actuel</label>
                 <input type="text">
@@ -55,7 +61,8 @@
                 <label for="">Nouveau mot de passe</label>
                 <input type="text">
             </div>
-            <button>Confirmer</button>
+            &#160;
+            <button class="button-confirm">Confirmer</button>
         </form>
     </main>
     <footer>
