--- a/index.html
+++ b/index.html
@@ -21,6 +21,22 @@
         </nav>
     </header>
     <main>
+      <div class="connection-overlay">
+          <div class="box">
+              <h3>Veuillez-vous connecter !</h3>
+              <form>
+                  <div class="email">
+                      <label for="email">Entrez votre adresse e-mail</label>
+                      <input type="email" name="email" id="email" placeholder="Email">
+                  </div>
+                  <div class="password">
+                      <label for="password">Entrez votre mot de passe</label>
+                      <input type="password" name="password" id="password" placeholder="Mot de passe">
+                  </div>
+                  <button type="submit">Se connecter</button>
+              </form>
+          </div>            
+        </div>
         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
@@ -53,7 +69,27 @@
 Découvrez nos locations de vacances dans les plus belles destinations de France.
         </p>
         <h3>Comment ça marche ?</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis molestiae sunt reiciendis iste laboriosam fugiat, id dolore velit tempore mollitia odit dolores eveniet ea, molestias modi vero, voluptate labore accusantium?</p>
+        <div>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus ab quasi dicta iure sed debitis totam alias non. Velit suscipit labore deserunt iusto quos tempore perferendis. Placeat, ipsam repudiandae! Cupiditate?
+          Excepturi hic iure accusamus quia accusantium ipsa dignissimos, rem provident atque delectus veritatis sequi impedit perferendis esse dolore quod voluptatum voluptatem repellat eligendi iusto quasi a. Corrupti corporis veritatis porro.
+          Facere natus vel qui. Harum atque eaque quia doloribus velit voluptatem dolorem aliquid! Consectetur inventore, dicta quam quibusdam suscipit id quo similique sit commodi corporis enim illo harum magni in!
+          </p>
+
+        </div>
+        <div>
+          <p>
+            Repudiandae, culpa harum distinctio similique quibusdam animi neque temporibus blanditiis, adipisci quia ducimus laborum laudantium quisquam sunt illo ut fugit, omnis recusandae quasi incidunt magni. Repellendus adipisci aut voluptatem debitis?
+          Delectus maxime architecto laudantium blanditiis veritatis dicta pariatur repellendus ipsam assumenda rerum sit sed quam voluptas necessitatibus, sequi totam dolorem molestiae hic tenetur voluptatem? Ipsa velit fuga labore atque obcaecati?
+          </p>
+
+        </div>
+        <div>
+          <p>
+            Repudiandae, culpa harum distinctio similique quibusdam animi neque temporibus blanditiis, adipisci quia ducimus laborum laudantium quisquam sunt illo ut fugit, omnis recusandae quasi incidunt magni. Repellendus adipisci aut voluptatem debitis?
+            Delectus maxime architecto laudantium blanditiis veritatis dicta pariatur repellendus ipsam assumenda necessitatibus, sequi totam dolorem molestiae hic tenetur voluptatem? Ipsa velit fuga labore atque obcaecati?
+          </p>
+
+        </div>
 
         <h3>Nos partenaires</h3>
         <img src="./img/solatypic.jpg" alt="solatypic">
