--- a/user.html
+++ b/user.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,8 +15,8 @@
             <h1>Les Vacances Chez Gustave</h1>
         </div>
         <nav>
-            <button onclick="window.location.href='home.html';">Accueil</button>
-            <button>Se connecter</button>
+            <button>Accueil</button>
+            <button class="connect">Se connecter</button>
         </nav>
     </header>
     <main>
