--- a/index.html
+++ b/index.html
@@ -69,20 +69,25 @@
         Découvrez nos locations de vacances dans les plus belles destinations de France.
         </p>
 
-        <h3 class="title-index">Comment ça marche ?</h3>
+        <h3 class="title-index">A propos</h3>
         <div class="container">
           <div class="card">
-            <p>
-              Repudiandae, culpa harum distinctio similique quibusdam animi neque temporibus blanditiis, adipisci quia ducimus laborum laudantium quisquam sunt illo ut fugit, omnis recusandae quasi incidunt magni. Repellendus adipisci aut voluptatem debitis?
-            Delectus maxime architecto laudantium blanditiis veritatis dicta pariatur repellendus ipsam assumenda rerum sit sed quam voluptas necessitatibus, sequi totam dolorem molestiae hic tenetur voluptatem? Ipsa velit fuga labore atque obcaecati?
+            <p>Arrivé à 50 ans, Gustave Maurice décide d'arrêter sa carrière dans la prospection immobilière et de se lancer avec 4 amis dans une nouvelle aventure !
+              <br>
+              Proposer des biens d’exception à la location
+              par le biais privilégié de la relation directe avec les clients.
             </p>
   
           </div>
           &emsp; 
           <div class="card">
             <p>
-              Repudiandae, culpa harum distinctio similique quibusdam animi neque temporibus blanditiis, adipisci quia ducimus laborum laudantium quisquam sunt illo ut fugit, omnis recusandae quasi incidunt magni. Repellendus adipisci aut voluptatem debitis?
-            Delectus maxime architecto laudantium blanditiis veritatis dicta pariatur repellendus ipsam assumenda rerum sit sed quam voluptas necessitatibus, sequi totam dolorem molestiae hic tenetur voluptatem? Ipsa velit fuga labore atque obcaecati?
+              Concernant l'accès de notre site entièrement, il vous faudra être coopté par une personne ayant déjà accès. 
+              <br>
+              Pour parrainer quelqu’un, vous pourrez le faire
+              depuis le site via un bouton qui envoie un ticket contenant un message et l’email du futur
+              utilisateur à l’associé ou en contactant directement l’associé par téléphone.
+              
             </p>
   
           </div>
@@ -111,8 +116,9 @@
             <span>Copyright &copy; 2022 lesvacanceschezgustave</span>
         </div>
     </footer>
-    <script src="script.js"></script>
-    <script src="index.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="./script.js"></script>
+    <script src="./index.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     
 </body>
