--- a/user.html
+++ b/user.html
@@ -41,7 +41,7 @@
             <h2>Mes informations</h2>
             &#160;
             <div class="name-user">
-                <label for="">Nom</label>
+                <label for="text">Nom</label>
                 <input type="text">
 
                 <label for="">Email</label>
@@ -53,11 +53,11 @@
             <h2>Changement de mot de passe</h2>
             &#160;
             <div>
-                <label for="">Mot de passe actuel</label>
+                <label for="text">Mot de passe actuel</label>
                 <input type="text">
             </div>
             <div>
-                <label for="">Nouveau mot de passe</label>
+                <label for="text">Nouveau mot de passe</label>
                 <input type="text">
             </div>
             &#160;
