--- a/html/home.html
+++ b/html/home.html
@@ -5,21 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="home.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../css/home.css">
+    <link rel="stylesheet" href="../css/style.css">
     <title>Les vacances chez Gustave</title>
 </head>
 <body>
     <header>
         <div class="logo">
-            <img src="./img/logo.png" alt="logo">
+            <img src="../img/logo.png" alt="logo">
             <h1>Les Vacances Chez Gustave</h1>
         </div>
         <nav>
             <button>Accueil</button>
             <!-- <button class="connect">Se connecter</button> -->
             <div class="user">
-                <img src="img/userColor.png" alt="User profile">
+                <img src="../img/userColor.png" alt="User profile">
                 <div class="menu">
                     <div class="profil">Profil</div>
                     <div class="parrain" onclick="openTicket()">Parrainer</div>
@@ -51,19 +51,19 @@
         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="img/img1.png" class="d-block w-100" alt="img1">
+                <img src="../img/img1.png" class="d-block w-100" alt="img1">
               </div>
               <div class="carousel-item">
-                <img src="img/img2.png" class="d-block w-100" alt="img2">
+                <img src="../img/img2.png" class="d-block w-100" alt="img2">
               </div>
               <div class="carousel-item">
-                <img src="img/img3.png" class="d-block w-100" alt="img3">
+                <img src="../img/img3.png" class="d-block w-100" alt="img3">
               </div>
               <div class="carousel-item">
-                <img src="img/img4.png" class="d-block w-100" alt="img4">
+                <img src="../img/img4.png" class="d-block w-100" alt="img4">
               </div>
               <div class="carousel-item">
-                <img src="img/img5.png" class="d-block w-100" alt="img5">
+                <img src="../img/img5.png" class="d-block w-100" alt="img5">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
@@ -127,7 +127,7 @@
                 <p>Pourquoi pas ici ?</p>
                 <div class="card-deck">
                     <div class="card">
-                        <img src="./img/paris.jpg" class="card-img-top" alt="Paris">
+                        <img src="../img/paris.jpg" class="card-img-top" alt="Paris">
                         <div class="card-body">
                             <h4>Paris</h4>
                           <p class="card-text">À 420 Km</p>
@@ -135,7 +135,7 @@
                     </div>
                     &emsp; 
                       <div class="card">
-                        <img src="./img/bordeaux.jpg" class="card-img-top" alt="Bordeaux">
+                        <img src="../img/bordeaux.jpg" class="card-img-top" alt="Bordeaux">
                         <div class="card-body">
                             <h4>Bordeaux</h4>
                           <p class="card-text">À 540 Km</p>
@@ -143,7 +143,7 @@
                       </div>
                       &emsp; 
                       <div class="card">
-                        <img src="./img/marseille.jpg" class="card-img-top" alt="Marseille">
+                        <img src="../img/marseille.jpg" class="card-img-top" alt="Marseille">
                         <div class="card-body">
                             <h4>Marseille</h4>
                           <p class="card-text">À 1 117 Km</p>
@@ -151,7 +151,7 @@
                       </div>
                       &emsp; 
                     <div class="card">
-                        <img src="./img/lille.jpg" class="card-img-top" alt="Lille">
+                        <img src="../img/lille.jpg" class="card-img-top" alt="Lille">
                         <div class="card-body">
                             <h4>Lille</h4>
                           <p class="card-text">À 559 Km</p>
@@ -164,19 +164,19 @@
                 <p>Nos locations les mieux notées</p>
                 <div class="best">
                     <div class="img1">
-                        <img src="img/img1.png" alt="" width="200">
+                        <img src="../img/img1.png" alt="" width="200">
                         <div class="ov">
                             <span>Voir descriptif</span>
                         </div>
                     </div>
                     <div>
-                        <img src="img/img2.png" alt="" width="200">
+                        <img src="../img/img2.png" alt="" width="200">
                         <div class="ov">
                             <span>Voir descriptif</span>
                         </div>
                     </div>
                     <div>
-                        <img src="img/img3.png" alt="" width="200">
+                        <img src="../img/img3.png" alt="" width="200">
                         <div class="ov">
                             <span>Voir descriptif</span>
                         </div>
@@ -200,8 +200,8 @@
     </footer>
 
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="script.js"></script>
-    <script src="home.js"></script>
+    <script src="../js/script.js"></script>
+    <script src="../js/home.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
