--- a/html/search.html
+++ b/html/search.html
@@ -16,7 +16,7 @@
             <h1>Les Vacances Chez Gustave</h1>
         </div>
         <nav>
-            <button>Accueil</button>
+            <button class="default">Accueil</button>
             <button class="connect">Se connecter</button>
             <div class="user">
                 <img src="../img/userColor.png" alt="User profile">
@@ -25,9 +25,31 @@
                     <div class="disconnect">Se déconnecter</div>
                 </div>
             </div>
+            <div class="mobile-btn">
+                <div class="line1"></div>
+                <div class="line2"></div>
+                <div class="line3"></div>
+            </div>
         </nav>
     </header>
     <main>
+        <div class="ov-mob"></div>
+        <div class="mobile-menu">
+            <div class="box-mobile">
+                <div class="close-btn">
+                    <img src="../img/xbut.svg" alt="close button">
+                </div>
+                <div class="accueil">
+                    <span class="default">Accueil</span>
+                </div>
+                <div class="user-mobile">
+                    <span class="profil">Profil</span>
+                </div>
+                <div class="disconnect">
+                    <span>Se déconnecter</span>
+                </div>
+            </div>
+        </div>
         <form class="search-inputs">
             <div class="destination">
                 <label for="destination">Où allez-vous ?</label>
@@ -46,12 +68,12 @@
             </div>
             <div class="options">
                 <div>
-                    <label for="adults">S.de Bain</label>
-                    <input type="number" name="adults" id="adults">
+                    <label for="sdb">S.de Bain</label>
+                    <input type="number" name="sdb" id="sdb">
                 </div>
                 <div>
-                    <label for="childs">m²</label>
-                    <input type="number" name="childs" id="childs">
+                    <label for="mc">m²</label>
+                    <input type="number" name="mc" id="mc">
                 </div>
                 <div>
                     <label for="rooms">Chambres</label>
@@ -166,6 +188,7 @@
         </div>
     </footer>
     <script src="../js/script.js"></script>
+    <script src="../js/user.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script type="module" src="../request/loginRequest.js"></script>
 </body>
