--- a/html/user.html
+++ b/html/user.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="user.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../css/user.css">
+    <link rel="stylesheet" href="../css/style.css">
     <title>Mon compte</title>
 </head>
 <body>
     <header>
         <div class="logo">
-            <img src="./img/logo.png" alt="logo">
+            <img src="../img/logo.png" alt="logo">
             <h1>Les Vacances Chez Gustave</h1>
         </div>
         <nav>
@@ -69,6 +69,6 @@
             <span>Copyright &copy; 2022 lesvacanceschezgustave</span>
         </div>
     </footer>
-    <script src="script.js"></script>
+    <script src="../js/script.js"></script>
 </body>
 </html>
