--- a/html/home.html
+++ b/html/home.html
@@ -26,10 +26,30 @@
                     <div class="disconnect">Se déconnecter</div>
                 </div>
             </div>
+            <div class="mobile-btn">
+                <div class="line1"></div>
+                <div class="line2"></div>
+                <div class="line3"></div>
+            </div>
         </nav>
     </header>
-    
     <main>
+        <div class="ov-mob"></div>
+        <div class="mobile-menu">
+            <div class="box-mobile">
+                <div class="close-btn">
+                    <img src="../img/xbut.svg" alt="close button">
+                </div>
+                <div class="accueil">
+                    <span class="default">Accueil</span>
+                </div>
+                <div class="user-mobile">
+                    <span class="profil">Profil</span>
+                </div>
+                <div class="disconnect">
+                    <span>Se déconnecter</span>
+                </div>
+            </div>
         <div class="ticket-overlay" id="hide">
             <div class="box-parrain">
                 <h3>Souhaitez-vous parrainer quelqu'un ?</h3>
