--- a/html/index.html
+++ b/html/index.html
@@ -18,9 +18,28 @@
         <nav>
             <button>Accueil</button>
             <button class="connect">Se connecter</button>
+            <div class="mobile-btn">
+              <div class="line1"></div>
+              <div class="line2"></div>
+              <div class="line3"></div>
+          </div>
         </nav>
     </header>
     <main>
+      <div class="ov-mob"></div>
+        <div class="mobile-menu">
+            <div class="box-mobile">
+                <div class="close-btn">
+                    <img src="../img/xbut.svg" alt="close button">
+                </div>
+                <div class="accueil">
+                    <span class="default">Accueil</span>
+                </div>
+                <div class="connect-c">
+                    <span class="connect">Se connecter</span>
+                </div>
+            </div>
+        </div>
       <div class="connection-overlay">
           <div class="box">
               <h3>Veuillez-vous connecter !</h3>
