--- a/html/index.html
+++ b/html/index.html
@@ -17,7 +17,7 @@
         </div>
         <nav>
             <button>Accueil</button>
-            <button class="connect">Se connecter</button>
+            <button class="connect" id="connect">Se connecter</button>
         </nav>
     </header>
     <main>
