--- a/html/user.html
+++ b/html/user.html
@@ -95,5 +95,6 @@
     </footer>
     <script src="../js/script.js"></script>
     <script src="../js/user.js"></script>
+    <script type="module" src="../request/editAcountRequest.js"></script>
 </body>
 </html>
